Added placeholder file in new Source folder. When setting up the VS Code project first time, the build fails if the folder does not exists.

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,9 @@
 build/
 
 # CMake cache and stuffs
-Source/
+Source/*
+
+# When setting up the VS Code project the first time..
+# we do need an empty directory Source. Otherwise the build command fails..
+# as of PlaydateSDK-0.10.1
+!Source/placeholder.txt
